# ehr-text-to-sql-rag

./: .dockerignore  .gitignore  README.md  create_vector_database.py  docker-compose.yml  pyproject.toml  requirements.txt
src/: Dockerfile  api.py  check_semantic_schemas.py  cli.py  create_clickhouse_db.py  create_db_from_csv.py  create_sqlite_db_from_csv.py  create_vector_database.py  delete_vector_database.py  docker_startup.sh  query_llm.py  query_sqlite_db.py  query_vector_database.py  read_data.py  streamlit_program.py  utils.py
